添加了readme文档

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ springdoc:
     tags-sorter: alpha
     #operations-sorter: order
   api-docs:
+    #api json数据
     path: /v3/api-docs
   group-configs:
     - group: 'com.hy.apidoc'
